// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Posthog's identify destination action: all fields 1`] = `
Object {
  "api_key": "5fdYDWiv]V!gh$",
  "distinct_id": "5fdYDWiv]V!gh$",
  "properties": Object {
    "$set": Object {
      "testType": "5fdYDWiv]V!gh$",
    },
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for Posthog's identify destination action: required fields 1`] = `
Object {
  "api_key": "5fdYDWiv]V!gh$",
  "distinct_id": "5fdYDWiv]V!gh$",
  "properties": Object {
    "$set": Object {
      "testType": "5fdYDWiv]V!gh$",
    },
  },
}
`;
